Update deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
           server: ${{ secrets.SFTP_HOSTNAME }}
           username: ${{ secrets.SFTP_USERNAME }}
           password: ${{ secrets.SFTP_PASSWORD }}
+          protocol: ftps
+          port: 22
           local-dir: ./public/
           server-dir: ./
           dry-run: true
