--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,29 @@ jobs:
       - name: Get latest code
         uses: actions/checkout@v2
         
-      - name: Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.2.0
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2
         with:
-          server: ${{ secrets.SFTP_HOSTNAME }}
+          node-version: '16'
+      - run: npm i
+      - run: npm run build
+        
+#       - name: Sync files
+#         uses: SamKirkland/FTP-Deploy-Action@4.2.0
+#         with:
+#           server: ${{ secrets.SFTP_HOSTNAME }}
+#           username: ${{ secrets.SFTP_USERNAME }}
+#           password: ${{ secrets.SFTP_PASSWORD }}
+#           local-dir: ./public/
+#           server-dir: ./
+#           dry-run: true
+          
+      - name: Sync files
+        uses: wangyucode/sftp-upload-action@v1.1
+        with:
+          host: ${{ secrets.SFTP_HOSTNAME }}
           username: ${{ secrets.SFTP_USERNAME }}
           password: ${{ secrets.SFTP_PASSWORD }}
-          local-dir: ./public/
-          server-dir: ./
-          dry-run: true
+          localDir: ./public/
+          remoteDir: ./
+          dryRun: true
