--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "animejs": "^3.2.1",
+    "papaparse": "^5.3.1",
     "prettier": "^2.3.1",
     "prettier-plugin-svelte": "^2.3.0",
     "rollup": "^2.3.4",
@@ -21,7 +23,6 @@
     "svelte-scrollto": "^0.2.0"
   },
   "dependencies": {
-    "animejs": "^3.2.1",
     "sirv-cli": "^1.0.0"
   }
 }
