--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "arrowParens": "avoid",
   "trailingComma": "none",
-  "svelteBracketNewLine": true
+  "svelteBracketNewLine": true,
+  "printWidth": 120
 }
