--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "www",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev --host",
+    "dev": "svelte-kit dev --host --port 4000",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview --host",
     "package": "svelte-kit package"
