--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@tryghost/content-api": "^1.11.4",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
-    "vite": "^3.1.3",
+    "vite": "3.1.0-beta.2",
     "svelte": "^3.50.1",
     "svelte-meta-tags": "^2.6.1",
     "svelte-scrollto": "^0.2.0"
