--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "1.0.0-next.41",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "1.0.0-next.464",
     "@tryghost/content-api": "^1.11.4",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
