--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "preview": "vite preview --host"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "1.0.0-next.41",
-    "@sveltejs/kit": "1.0.0-next.464",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/kit": "next",
     "@tryghost/content-api": "^1.11.4",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
-    "vite": "3.1.0-beta.2",
+    "vite": "^3.1.3",
     "svelte": "^3.50.1",
     "svelte-meta-tags": "^2.6.1",
     "svelte-scrollto": "^0.2.0"
