--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite dev --host --port 3000",
     "build": "vite build",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host --port 3000"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "next",
