--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "preview": "vite preview --host --port 3000"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "next",
-    "@sveltejs/kit": "next",
-    "@tryghost/content-api": "^1.11.4",
-    "prettier": "^2.6.2",
-    "prettier-plugin-svelte": "^2.7.0",
-    "vite": "^3.1.3",
-    "svelte": "^3.50.1",
-    "svelte-meta-tags": "^2.6.1",
-    "svelte-scrollto": "^0.2.0"
+    "@sveltejs/adapter-static": "^1.0.0",
+    "@sveltejs/kit": "^1.0.1",
+    "@tryghost/content-api": "^1.11.5",
+    "prettier": "^2.8.1",
+    "prettier-plugin-svelte": "^2.9.0",
+    "svelte": "^3.55.0",
+    "svelte-meta-tags": "^2.6.4",
+    "svelte-scrollto": "^0.2.0",
+    "vite": "^4.0.3"
   },
   "type": "module",
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   }
 }
